--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,17 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title>Softboxen UI</title>
+        <title>Softbox</title>
         <base href="/" />
 
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="icon" type="image/x-icon" href="assets/icons/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="assets/images/app_icon/favicon.ico" />
     </head>
     <body>
-        <app-root>Loading...</app-root>
+        <app-root>
+            <div style="height: 100%; display: flex; align-items: center; justify-content: space-around;">
+                <h1>Loading...</h1>
+            </div>
+        </app-root>
     </body>
 </html>
