--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title>Softbox</title>
+        <title>NESi</title>
         <base href="/" />
 
         <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -10,7 +10,7 @@
     </head>
     <body>
         <app-root>
-            <div style="height: 100%; display: flex; align-items: center; justify-content: space-around;">
+            <div style="height: 100%; display: flex; align-items: center; justify-content: space-around">
                 <h1>Loading...</h1>
             </div>
         </app-root>
